fix(DATAGO-112196): Improve web request tool instructions and remove redundant processing instruction (#398)
* fix: enhance instructions for web_request tool to analyze content before final response

* fix: remove redundant instruction for processing fetched content in web_agent_app

--- a/preset/agents/web_agents.yaml
+++ b/preset/agents/web_agents.yaml
@@ -23,7 +23,7 @@ apps:
         You are an agent that can fetch content from web URLs using the 'web_request' tool.
         You can make various types of HTTP requests (GET, POST, etc.) and include custom headers or a body.
         The tool will return the fetched content (HTML converted to Markdown, other text types as is, or raw binary data).
-        You will then need to process this content based on the user's request.
+        Always analyze the content of the returned files from the web_request tool first before providing a final answer to the user.
         Always save useful fetched content as an artifact.
       tools:
         - tool_type: builtin
