--- a/preset/logging_config.ini
+++ b/preset/logging_config.ini
@@ -39,3 +39,7 @@ keys=simpleFormatter
 
 [formatter_simpleFormatter]
 format=%(asctime)s | %(levelname)-5s | %(name)s | %(message)s
+
+[formatter_jsonFormatter]
+class=pythonjsonlogger.jsonlogger.JsonFormatter
+format=%(asctime)s %(levelname)s %(name)s %(message)s
