--- a/templates/logging_config_template.ini
+++ b/templates/logging_config_template.ini
@@ -35,7 +35,11 @@ formatter=simpleFormatter
 args=(sys.stdout,)
 
 [formatters]
-keys=simpleFormatter
+keys=simpleFormatter,jsonFormatter
 
 [formatter_simpleFormatter]
 format=%(asctime)s | %(levelname)-5s | %(name)s | %(message)s
+
+[formatter_jsonFormatter]
+class=pythonjsonlogger.jsonlogger.JsonFormatter
+format=%(asctime)s %(levelname)s %(name)s %(message)s
