--- a/preset/logging_config.ini
+++ b/preset/logging_config.ini
@@ -35,7 +35,7 @@ formatter=simpleFormatter
 args=(sys.stdout,)
 
 [formatters]
-keys=simpleFormatter
+keys=simpleFormatter,jsonFormatter
 
 [formatter_simpleFormatter]
 format=%(asctime)s | %(levelname)-5s | %(name)s | %(message)s
