Add smoke Cypress test

--- a/client/webui/frontend/.gitignore
+++ b/client/webui/frontend/.gitignore
@@ -30,3 +30,8 @@ solace-agent-mesh-ui-*.tgz
 
 *storybook.log
 storybook-static
+
+# Cypress output
+cypress/screenshots
+cypress/videos
+cypress/results
