--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,12 @@ s3 = ["boto3>=1.35.0,<2.0"]
 vertex = ["google-cloud-aiplatform>=1.38"]
 employee_tools = ["holidays>=0.24"]
 postgresql = ["psycopg2-binary==2.9.10"]
-test = [
+
+[tool.hatch.envs.hatch-test]
+parallel = false
+installer = "pip"
+dependencies = [
+    "solace-agent-mesh[postgresql,gcs,vertex,employee_tools,s3]",
     "pytest-asyncio",
     "pytest>=8.0.0",
     "pytest-mock>=3.0.0",
@@ -84,12 +89,6 @@ test = [
     "psycopg2-binary",
     "asyncpg",
     "sam-test-infrastructure @ {root:uri}/tests/sam-test-infrastructure"
-]
-[tool.hatch.envs.hatch-test]
-parallel = false
-installer = "pip"
-dependencies = [
-    "solace-agent-mesh[test,postgresql,gcs,vertex,employee_tools,s3]",
 ]
 
 [[tool.hatch.envs.hatch-test.matrix]]
