--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,10 +64,10 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-gcs = ["google-cloud-storage>=2.0"]
-s3 = ["boto3>=1.35.0,<2.0"]
-vertex = ["google-cloud-aiplatform>=1.38"]
-employee_tools = ["holidays>=0.24"]
+gcs = ["google-cloud-storage==2.19.0"]
+s3 = ["boto3==1.40.37"]
+vertex = ["google-cloud-aiplatform==1.120.0"]
+employee_tools = ["holidays==0.81.0"]
 postgresql = ["psycopg2-binary==2.9.10"]
 
 [tool.hatch.envs.hatch-test]
