--- a/.dockerignore
+++ b/.dockerignore
@@ -1,70 +1,86 @@
-# Python compiled files
-*.pyc
-*.pyo
-*.pyd
-__pycache__
-.pytest_cache
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+*.egg
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.hypothesis/
 
-# Environment files
-.env*
+# Virtual environments
+venv/
+.venv/
+ENV/
+env/
 .env
-.env_template
 
-# Development files
-docker-compose-local.yaml
-Makefile
-CODE_OF_CONDUCT.md
-CONTRIBUTING.md
-
-# Dependencies
-node_modules
-venv
-.venv
-.venv*
-
-# IDE and editor files
-.vscode
-.idea
+# IDE
+.vscode/
+.idea/
 *.swp
 *.swo
 *~
-
-# Version control
-.git
-.gitignore
-
-# OS files
 .DS_Store
-Thumbs.db
 
-# Logs and temporary files
+# Git
+.git/
+.gitignore
+.gitattributes
+
+# Documentation (markdown files only, keep docs/ for build)
+*.md
+!README.md
+!docs/**/*.md
+
+# CI/CD (but keep helper_scripts needed for build)
+.github/workflows/
+.github/actions/
+.gitlab-ci.yml
+
+# Node.js (we'll copy specific frontend dirs when needed)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn
+
+# Logs
 *.log
-*.out
-*.txt
-project_notes.txt
-*.trace
-trace_*
+build.log
+solace_ai_connector.log
+test_llm_server.log
 
-# Build artifacts
-dist
-build
-tmp
-var
-*.egg-info
-
-# Test files and coverage
+# Tests
 tests/
+test/
+*.test.js
+*.test.py
+test_*.py
+*_test.py
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Build artifacts from previous builds
+*.whl
+workflow-repo/
+
+# Docker
+Dockerfile*
+docker-compose*.yml
+.dockerignore
+
+# Other
 .coverage
-.tox
-.pytest_cache
-coverage.xml
-htmlcov/
-
-
-# CI/CD files
-.github/actions
-.github/workflows
-wss-unified-agent.config
-
-# Lock file (not needed in container)
-uv.lock
+.mypy_cache/
+.ruff_cache/
