--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -164,8 +164,16 @@ jobs:
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
       - name: Login to Amazon ECR
-        if: fromJSON(needs.prepare-metadata.outputs.docker_push)
+        if: fromJSON(needs.prepare-metadata.outputs.docker_push) && fromJSON(needs.prepare-metadata.outputs.use_ecr)
         uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076 # v2.0.1
+
+      - name: Login to GitHub Container Registry
+        if: fromJSON(needs.prepare-metadata.outputs.docker_push) && !fromJSON(needs.prepare-metadata.outputs.use_ecr)
+        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3.3.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Determine Image Name
         id: image_name
@@ -174,8 +182,8 @@ jobs:
             image_name="${{ secrets.SAM_AWS_ECR_REGISTRY }}/solace-agent-mesh"
             echo "Using ECR registry: ${image_name}"
           else
-            image_name="${{ github.repository }}"
-            echo "Using GitHub repository: ${image_name}"
+            image_name="ghcr.io/${{ github.repository }}"
+            echo "Using GitHub Container Registry: ${image_name}"
           fi
           echo "image_name=${image_name}" >> $GITHUB_OUTPUT
 
@@ -214,8 +222,16 @@ jobs:
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
       - name: Login to Amazon ECR
-        if: fromJSON(needs.prepare-metadata.outputs.docker_push)
+        if: fromJSON(needs.prepare-metadata.outputs.docker_push) && fromJSON(needs.prepare-metadata.outputs.use_ecr)
         uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076 # v2.0.1
+
+      - name: Login to GitHub Container Registry
+        if: fromJSON(needs.prepare-metadata.outputs.docker_push) && !fromJSON(needs.prepare-metadata.outputs.use_ecr)
+        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3.3.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
@@ -228,8 +244,8 @@ jobs:
             image_name="${{ secrets.SAM_AWS_ECR_REGISTRY }}/solace-agent-mesh"
             echo "Using ECR registry: ${image_name}"
           else
-            image_name="${{ github.repository }}"
-            echo "Using GitHub repository: ${image_name}"
+            image_name="ghcr.io/${{ github.repository }}"
+            echo "Using GitHub Container Registry: ${image_name}"
           fi
 
           # Reconstruct tags
