Updated test suite loader to use pydantic

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -265,6 +265,21 @@
             ],
             "console": "integratedTerminal",
             "justMyCode": false
+        },
+        {
+            "name": "SAM Eval",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "cli.main",
+            "console": "integratedTerminal",
+            "args": [
+                "eval",
+                "tests/evaluation/config.json"
+            ],
+            "justMyCode": false,
+            "env": {
+                "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
+            }
         }
     ],
     "inputs": [
