Add prompt caching strategy to shared configuration and docs

--- a/templates/shared_config.yaml
+++ b/templates/shared_config.yaml
@@ -19,6 +19,8 @@ shared_config:
       api_key: ${LLM_SERVICE_API_KEY} # Use env var for API key
       # Enable parallel tool calls for planning model
       parallel_tool_calls: true 
+      # Prompt Caching Strategy
+      cache_strategy: "5m" # none, 5m, 1h
 
       # max_tokens: ${MAX_TOKENS, 16000} # Set a reasonable max token limit for planning
       # temperature: 0.1 # Lower temperature for more deterministic planning
@@ -32,6 +34,8 @@ shared_config:
       api_base: ${LLM_SERVICE_ENDPOINT} # Use env var for endpoint URL
       # 'api_key' provides authentication.
       api_key: ${LLM_SERVICE_API_KEY} # Use env var for API key
+      # Prompt Caching Strategy
+      cache_strategy: "5m" # none, 5m, 1h
 
     image_gen: &image_generation_model
       # This dictionary structure tells ADK to use the LiteLlm wrapper.
