--- a/examples/shared_config.yaml
+++ b/examples/shared_config.yaml
@@ -22,6 +22,9 @@ shared_config:
       parallel_tool_calls: true # Enable parallel tool calls for planning model
       max_tokens: ${MAX_TOKENS, 16000} # Set a reasonable max token limit for planning
       temperature: 0.1 # Lower temperature for more deterministic planning
+      # Prompt Caching Strategy
+      cache_strategy: "5m"  # none, 5m, 1h
+
 
     general: &general_model
       # This dictionary structure tells ADK to use the LiteLlm wrapper.
@@ -30,7 +33,9 @@ shared_config:
       # 'api_base' tells LiteLLM where to send the request.
       api_base: ${LLM_SERVICE_ENDPOINT} # Use env var for endpoint URL
       # 'api_key' provides authentication.
-      api_key: ${LLM_SERVICE_API_KEY} # Use env var for API key
+      api_key: ${LLM_SERVICE_API_KEY} # Use env var for API key 
+      # Prompt Caching Strategy
+      cache_strategy: "5m" # none, 5m, 1h
 
     image_gen: &image_generation_model
       # This dictionary structure tells ADK to use the LiteLlm wrapper.
