refactor: update authorization service paths in configuration files

--- a/examples/gateways/rest_gateway_example.yaml
+++ b/examples/gateways/rest_gateway_example.yaml
@@ -59,8 +59,8 @@ apps:
       # --- Authorization Service (Optional, for RBAC on agents) ---
       authorization_service:
         type: "default_rbac"
-        role_definitions_path: ${ROLE_DEFINITIONS_PATH, examples/auth/dev-roles.yaml}
-        user_assignments_path: ${USER_ASSIGNMENTS_PATH, examples/auth/dev-users.yaml}
+        role_to_scope_definitions_path: ${ROLE_DEFINITIONS_PATH, examples/auth/dev-roles.yaml}
+        user_to_role_assignments_path: ${USER_ASSIGNMENTS_PATH, examples/auth/dev-users.yaml}
 
       # --- REST Gateway Specific Configuration ---
       rest_api_server_host: ${REST_API_HOST, 0.0.0.0}
