--- a/examples/gateways/event_mesh_gateway_example.yaml
+++ b/examples/gateways/event_mesh_gateway_example.yaml
@@ -9,8 +9,7 @@ log:
   log_file_level: DEBUG
   log_file: em_gateway.log
 
-# To use the `shared_config.yaml` file, uncomment the following line and remove the `shared_config` section below.
-!include shared_config.yaml
+!include ../shared_config.yaml
 
 
 apps:
@@ -24,8 +23,6 @@ apps:
       gateway_id: "event-mesh-gw-01" # Unique ID for this gateway instance
 
       artifact_service: *default_artifact_service
-      authorization_service:
-        type: "none" # Or "default_rbac"
       
       # --- Event Mesh Gateway Specific Parameters ---
       event_mesh_broker_config: # For the data plane Solace client
