chore(DATAGO-113770): Update Evaluation Framework to Run against Remote Enviroments (#417)
* Updated test suite loader to use pydantic

* Updated logging and addressed some sonarqube issues

* Updated test case loader to use pydantic validation

* Updated logging

* Addressed more sonarqube isses

* Added logic to run against remote environments

* Added broker configurations

* Refactored evaluation directory

* Updated base url logic and server health check

* Added readiness check for remote instances and changed remote vars

* Updated install check

* Fixed artifacts input/output for remote

* Added notion of workers and updated examples

* Added evaluation documentation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -277,6 +277,22 @@
             ],
             "console": "integratedTerminal",
             "justMyCode": false
+        },
+        {
+            "name": "SAM Eval",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "cli.main",
+            "console": "integratedTerminal",
+            "args": [
+                "eval",
+                "tests/evaluation/remote_example.json",
+                "-v"
+            ],
+            "justMyCode": false,
+            "env": {
+                "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
+            }
         }
     ],
     "inputs": [
