--- a/preset/agents/basic/webui.yaml
+++ b/preset/agents/basic/webui.yaml
@@ -52,7 +52,6 @@ apps:
             Format responses to the user in Markdown using appropriate formatting.
 
       # --- Frontend Config Passthrough ---
-      frontend_welcome_message: >
-            
+      frontend_welcome_message: Hello, how can I assist you?
       frontend_bot_name: Solace Agent Mesh
       frontend_collect_feedback: false
