--- a/templates/logging_config_template.ini
+++ b/templates/logging_config_template.ini
@@ -2,22 +2,22 @@
 keys=root,solace_ai_connector,solace_agent_mesh,sam_trace
 
 [logger_root]
-level=WARN
+level=${LOGGING_ROOT_LEVEL, WARNING}
 handlers=streamHandler,rotatingFileHandler
 qualname=root
 
 [logger_solace_ai_connector]
-level=INFO
+level=${LOGGING_SOLACE_AI_CONNECTOR_LEVEL, INFO}
 handlers=
 qualname=solace_ai_connector
 
 [logger_solace_agent_mesh]
-level=INFO
+level=${LOGGING_SAM_LEVEL, INFO}
 handlers=
 qualname=solace_agent_mesh
 
 [logger_sam_trace]
-level=INFO
+level=${LOGGING_SAM_TRACE_LEVEL, INFO}
 handlers=
 qualname=sam_trace
 
@@ -35,7 +35,11 @@ formatter=simpleFormatter
 args=(sys.stdout,)
 
 [formatters]
-keys=simpleFormatter
+keys=simpleFormatter,jsonFormatter
 
 [formatter_simpleFormatter]
 format=%(asctime)s | %(levelname)-5s | %(name)s | %(message)s
+
+[formatter_jsonFormatter]
+class=pythonjsonlogger.jsonlogger.JsonFormatter
+format=%(asctime)s %(levelname)s %(name)s %(message)s
