feat(projects): initial test suite of api endpoints related to the projects feature

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -160,6 +160,13 @@ markers = [
     "artifacts: marks tests related to artifact handling and services",
     "api: marks tests related to the API",
     "tasks: marks tests related to task management",
+    "projects: marks tests related to project management",
+    "crud: marks tests related to CRUD operations",
+    "templates: marks tests related to template operations",
+    "pagination: marks tests related to pagination functionality",
+    "security: marks tests related to security and authorization",
+    "error: marks tests related to error handling scenarios",
+    "validation: marks tests related to input validation",
 
     # Agent Tools
     # Markers for the built-in agent tools.
