feat: add default agent configuration to projects
Add support for setting and managing a default agent ID at the project level,
allowing projects to automatically use a specific agent for new chat sessions.

Backend changes:
- Add default_agent_id column to projects table via Alembic migration
- Update Project entity, model, repository, and service to handle default agent
- Extend project API endpoints to support default agent CRUD operations
- Update project request/response DTOs with default_agent_id field

Frontend changes:
- Create DefaultAgentSection component for agent selection UI
- Integrate default agent section into ProjectMetadataSidebar
- Update ChatProvider to use project's default agent when creating sessions
- Add default_agent_id to project TypeScript types

Testing:
- Update integration test fixtures to support default agent configuration
- Add test coverage for declarative runner scenarios

This enables users to configure a preferred agent per project, streamlining
the chat session creation workflow and improving user experience.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -161,6 +161,7 @@ markers = [
     "api: marks tests related to the API",
     "tasks: marks tests related to task management",
     "projects: marks tests related to project management",
+    "default_agent: marks tests related to default agent functionality",
     "crud: marks tests related to CRUD operations",
     "templates: marks tests related to template operations",
     "pagination: marks tests related to pagination functionality",
