--- a/client/webui/frontend/package.json
+++ b/client/webui/frontend/package.json
@@ -63,7 +63,7 @@
         ]
     },
     "dependencies": {
-        "@hookform/resolvers": "^5.2.1",
+        "@hookform/resolvers": "^5.2.2",
         "@radix-ui/react-accordion": "^1.2.11",
         "@radix-ui/react-alert-dialog": "^1.1.15",
         "@radix-ui/react-avatar": "^1.1.10",
@@ -90,6 +90,7 @@
         "radix-ui": "^1.4.2",
         "react": ">=19.0.0",
         "react-dom": ">=19.0.0",
+        "react-hook-form": "^7.65.0",
         "react-intersection-observer": "^9.16.0",
         "react-json-view-lite": "^2.4.1",
         "react-resizable-panels": "^3.0.3",
@@ -98,7 +99,7 @@
         "tailwind-scrollbar-hide": "^4.0.0",
         "tailwindcss": "^4.1.10",
         "uuid": "^13.0.0",
-        "zod": "^4.0.17"
+        "zod": "^4.1.12"
     },
     "peerDependencies": {
         "react": ">=19.0.0",
