--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -65,12 +65,12 @@
             }
         },
         {
-            "name": "SAM (test with event-mesh and slack gateway)",
+            "name": "SAM (test with Slack)",
             "type": "debugpy",
             "request": "launch",
             "module": "solace_ai_connector.main",
             "console": "integratedTerminal",
-            "args": "--envfile .env examples/gateways/slack_gateway_example.yaml examples/gateways/event_mesh_gateway_example.yaml examples/a2a_orchestrator.yaml examples/a2a_agents.yaml examples/webui_backend.yaml examples/test_agent_example.yaml examples/a2a_multimodal.yaml",
+            "args": "--envfile .env examples/gateways/slack_gateway_example.yaml examples/agents/orchestrator_example.yaml examples/agents/a2a_agents_example.yaml examples/gateways/webui_gateway_example.yaml examples/agents/test_agent_example.yaml examples/agents/a2a_multimodal_example.yaml",
             "justMyCode": false,
         },
         {
