--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,19 +10,7 @@
             "request": "launch",
             "module": "solace_ai_connector.main",
             "console": "integratedTerminal",
-            "args": "--envfile .env examples/agents/orchestrator_example.yaml examples/gateways/webui_gateway_example.yaml",
-            "justMyCode": false,
-            "env": {
-                "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
-            }
-        },
-        {
-            "name": "SAM (Agents Only)",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "solace_ai_connector.main",
-            "console": "integratedTerminal",
-            "args": "--envfile .env examples/agents/orchestrator_example.yaml examples/agents/a2a_agents_example.yaml examples/agents/a2a_multimodal_example.yaml",
+            "args": "--envfile .env examples/agents/orchestrator_example.yaml examples/agents/a2a_agents_example.yaml examples/gateways/webui_example.yaml",
             "justMyCode": false,
             "env": {
                 "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
@@ -34,7 +22,7 @@
             "request": "launch",
             "module": "solace_ai_connector.main",
             "console": "integratedTerminal",
-            "args": "--envfile .env examples/agents/orchestrator_example.yaml examples/agents/a2a_agents_example.yaml examples/gateways/webui_gateway_example.yaml examples/agents/test_agent_example.yaml examples/agents/a2a_multimodal_example.yaml",
+            "args": "--envfile .env examples/agents/orchestrator_example.yaml examples/agents/a2a_agents_example.yaml examples/gateways/webui_example.yaml examples/agents/test_agent.yaml examples/agents/a2a_multimodal_example.yaml",
             "justMyCode": false,
             "env": {
                 "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
@@ -53,24 +41,12 @@
             }
         },
         {
-            "name": "SAM (a2a-proxy)",
+            "name": "SAM (test with event-mesh-gateway)",
             "type": "debugpy",
             "request": "launch",
             "module": "solace_ai_connector.main",
             "console": "integratedTerminal",
-            "args": "--envfile .env examples/agents/orchestrator_example.yaml examples/gateways/webui_gateway_example.yaml examples/agents/test_agent_example.yaml examples/a2a_proxy_example.yaml",
-            "justMyCode": false,
-            "env": {
-                "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
-            }
-        },
-        {
-            "name": "SAM (test with event-mesh and slack gateway)",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "solace_ai_connector.main",
-            "console": "integratedTerminal",
-            "args": "--envfile .env examples/gateways/slack_gateway_example.yaml examples/gateways/event_mesh_gateway_example.yaml examples/a2a_orchestrator.yaml examples/a2a_agents.yaml examples/webui_backend.yaml examples/test_agent_example.yaml examples/a2a_multimodal.yaml",
+            "args": "--envfile .env examples/slack.yaml examples/event-mesh-gateway.yaml examples/a2a_orchestrator.yaml examples/a2a_agents.yaml examples/webui_backend.yaml examples/test_agent.yaml examples/a2a_multimodal.yaml",
             "justMyCode": false,
         },
         {
@@ -79,7 +55,7 @@
             "request": "launch",
             "module": "solace_ai_connector.main",
             "console": "integratedTerminal",
-            "args": "--envfile .env examples/agents/orchestrator_example.yaml examples/gateways/webui_gateway_example.yaml examples/agents/test_agent_example.yaml",
+            "args": "--envfile .env examples/agents/orchestrator_example.yaml examples/gateways/webui_example.yaml examples/agents/test_agent.yaml",
             "justMyCode": false,
             "env": {
                 "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
@@ -91,7 +67,7 @@
             "request": "launch",
             "module": "solace_ai_connector.main",
             "console": "integratedTerminal",
-            "args": "--envfile .env examples/agents/orchestrator_example.yaml examples/agents/a2a_agents_example.yaml examples/gateways/webui_gateway_example.yaml examples/gateways/rest_gateway_example.yaml examples/agents/test_agent_example.yaml examples/agents/a2a_multimodal_example.yaml",
+            "args": "--envfile .env examples/agents/orchestrator_example.yaml examples/agents/a2a_agents_example.yaml examples/gateways/webui_example.yaml examples/gateways/rest_gateway_example.yaml examples/agents/test_agent.yaml examples/agents/a2a_multimodal_example.yaml",
             "justMyCode": false,
             "env": {
                 "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
@@ -103,7 +79,7 @@
             "request": "launch",
             "module": "solace_ai_connector.main",
             "console": "integratedTerminal",
-            "args": "--envfile .env examples/agents/a2a_multimodal_example.yaml examples/gateways/webui_gateway_example.yaml ",
+            "args": "--envfile .env examples/agents/a2a_multimodal_example.yaml examples/gateways/webui_example.yaml ",
             "justMyCode": false,
             "env": {
                 "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
@@ -175,7 +151,19 @@
             "request": "launch",
             "module": "solace_ai_connector.main",
             "console": "integratedTerminal",
-            "args": "--envfile .env examples/gateways/webui_gateway_example.yaml",
+            "args": "--envfile .env examples/gateways/webui_example.yaml",
+            "justMyCode": false,
+            "env": {
+                "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
+            }
+        },
+        {
+            "name": "Full",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "solace_ai_connector.main",
+            "console": "integratedTerminal",
+            "args": "--envfile .env examples/agents/orchestrator_example.yaml examples/agents/a2a_agents_example.yaml examples/gateways/webui_example.yaml",
             "justMyCode": false,
             "env": {
                 "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
@@ -187,7 +175,7 @@
             "request": "launch",
             "module": "solace_ai_connector.main",
             "console": "integratedTerminal",
-            "args": "--envfile .env examples/agents/orchestrator_example.yaml examples/gateways/webui_gateway_example.yaml",
+            "args": "--envfile .env examples/agents/a2a_host_example.yaml examples/gateways/webui_example.yaml",
             "justMyCode": false,
             "env": {
                 "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
@@ -199,7 +187,7 @@
             "request": "launch",
             "module": "solace_ai_connector.main",
             "console": "integratedTerminal",
-            "args": "--envfile .env examples/agents/a2a_mcp_example.yaml examples/gateways/webui_gateway_example.yaml",
+            "args": "--envfile .env examples/agents/a2a_mcp_example.yaml examples/gateways/webui_example.yaml",
             "justMyCode": false,
             "env": {
                 "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
@@ -211,7 +199,7 @@
             "request": "launch",
             "module": "solace_ai_connector.main",
             "console": "integratedTerminal",
-            "args": "--envfile .env examples/gateways/event_mesh_gateway_example.yaml examples/agents/a2a_multimodal_example.yaml examples/agents/orchestrator_example.yaml examples/gateways/webui_gateway_example.yaml",
+            "args": "--envfile .env examples/gateways/sam_em_gateway.yaml examples/agents/a2a_multimodal_example.yaml examples/agents/orchestrator_example.yaml examples/gateways/webui_example.yaml",
             "justMyCode": false,
             "env": {
                 "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
@@ -277,22 +265,6 @@
             ],
             "console": "integratedTerminal",
             "justMyCode": false
-        },
-        {
-            "name": "SAM Eval",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "cli.main",
-            "console": "integratedTerminal",
-            "args": [
-                "eval",
-                "tests/evaluation/remote_example.json",
-                "-v"
-            ],
-            "justMyCode": false,
-            "env": {
-                "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
-            }
         }
     ],
     "inputs": [
