--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,6 +41,18 @@
             }
         },
         {
+            "name": "SAM (MCP gateway)",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "solace_ai_connector.main",
+            "console": "integratedTerminal",
+            "args": "--envfile .env examples/gateways/mcp_gateway_example.yaml examples/agents/orchestrator_example.yaml examples/agents/a2a_agents_example.yaml examples/gateways/webui_gateway_example.yaml examples/agents/test_agent_example.yaml examples/agents/a2a_multimodal_example.yaml",
+            "justMyCode": false,
+            "env": {
+                "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
+            }
+        },
+        {
             "name": "SAM (preset)",
             "type": "debugpy",
             "request": "launch",
