--- a/client/webui/frontend/package.json
+++ b/client/webui/frontend/package.json
@@ -22,6 +22,7 @@
         "chat",
         "agents"
     ],
+    "type": "module",
     "main": "./dist/index.js",
     "module": "./dist/index.js",
     "types": "./dist/index.d.ts",
