--- a/templates/logging_config_template.ini
+++ b/templates/logging_config_template.ini
@@ -38,8 +38,8 @@ args=(sys.stdout,)
 keys=simpleFormatter,jsonFormatter
 
 [formatter_simpleFormatter]
-format=%(asctime)s | %(levelname)-5s | %(name)s | %(message)s
+format=%(asctime)s | %(levelname)-5s | %(threadName)s | %(name)s | %(message)s
 
 [formatter_jsonFormatter]
 class=pythonjsonlogger.jsonlogger.JsonFormatter
-format=%(asctime)s %(levelname)s %(name)s %(message)s
+format=%(asctime)s %(levelname)s %(threadName)s %(name)s %(message)s
